--- a/.htaccess
+++ b/.htaccess
@@ -32,19 +32,10 @@ ServerSignature Off
     Deny from all
 </FilesMatch>
 
-
-<Directory ~ "/(php)/">
-    <FilesMatch "\.php$">
-        Order Allow,Deny
-        Allow from all
-    </FilesMatch>
-</Directory>
-
-# Prevent clickjacking
+# Security headers
 <IfModule mod_headers.c>
-    Header always set X-Frame-Options "SAMEORIGIN"
     Header always set X-Content-Type-Options "nosniff"
-    Header always set X-XSS-Protection "1; mode=block"
+    Header always set X-Frame-Options "SAMEORIGIN"
     Header always set Referrer-Policy "strict-origin-when-cross-origin"
 </IfModule>
 
