--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -4,31 +4,14 @@ deployment:
     - export DEPLOYPATH=/home/maximuss/public_html/
     - /bin/rsync -av --delete --exclude ".git" --exclude ".github" ./ $DEPLOYPATH
 
-    # Set correct permissions: 0750 for directories, 0640 for files
-    - /usr/bin/find $DEPLOYPATH -type d -exec /bin/chmod 0750 {} \;
-    - /usr/bin/find $DEPLOYPATH -type f -exec /bin/chmod 0640 {} \;
-    
-    # Set group ownership to 'nobody' for webserver access
-    - /bin/chgrp -R nobody $DEPLOYPATH || true
-    
-    # Ensure .htaccess is readable by webserver (critical)
-    - /bin/chmod 0640 $DEPLOYPATH/.htaccess || true
-    - /bin/chgrp nobody $DEPLOYPATH/.htaccess || true
-    
-    # Ensure PHP directory has correct permissions
-    - /bin/chmod 0750 $DEPLOYPATH/php || true
-    - /usr/bin/find $DEPLOYPATH/php -type f -name "*.php" -exec /bin/chmod 0640 {} \; || true
-    - /bin/chgrp -R nobody $DEPLOYPATH/php || true
-    
-    # Ensure index files are readable
-    - /bin/chmod 0640 $DEPLOYPATH/index.html || true
-    - /bin/chmod 0640 $DEPLOYPATH/index.php || true
-    
-    # Health check file (easy to test in browser)
+    # SAFE permissions – do NOT depend on group ownership
+    - /usr/bin/find $DEPLOYPATH -type d -exec /bin/chmod 755 {} \;
+    - /usr/bin/find $DEPLOYPATH -type f -exec /bin/chmod 644 {} \;
+
+    # Health check file
     - /bin/echo "ok" > $DEPLOYPATH/health.txt
-    - /bin/chmod 0644 $DEPLOYPATH/health.txt
-    - /bin/chgrp nobody $DEPLOYPATH/health.txt || true
-    
-    # Log deployment completion with timestamp
-    - /bin/echo "Deployment completed at $(/bin/date)" >> $DEPLOYPATH/deployment.log
-    - /bin/chmod 0640 $DEPLOYPATH/deployment.log || true
+    - /bin/chmod 644 $DEPLOYPATH/health.txt
+
+    # Deploy log (optional)
+    - /bin/echo "Deploy OK $(/bin/date)" >> $DEPLOYPATH/deployment.log
+    - /bin/chmod 644 $DEPLOYPATH/deployment.log
